# Advent-2021

./: .gitignore  Cargo.toml  README.md  main.rs
.devcontainer/: devcontainer.json
common/: mod.rs
common/src/: lib.rs
day1/: mod.rs
day2/: mod.rs
day3/: mod.rs
day4/: mod.rs
day5/: mod.rs
day6/: mod.rs
day7/: mod.rs
days/day1/: Cargo.toml
days/day1/src/: lib.rs
days/day10/: Cargo.toml
days/day10/src/: lib.rs
days/day11/: Cargo.toml
days/day11/src/: lib.rs
days/day12/: Cargo.toml
days/day12/src/: lib.rs
days/day13/: Cargo.toml
days/day13/src/: lib.rs
days/day14/: Cargo.toml
days/day14/src/: lib.rs
days/day15/: Cargo.toml
days/day15/src/: lib.rs
days/day16/: Cargo.toml
days/day16/src/: lib.rs
days/day2/src/: lib.rs
days/day3/: Cargo.toml
days/day3/src/: lib.rs
days/day4/src/: lib.rs
days/day5/: Cargo.toml
days/day5/src/: lib.rs
days/day6/src/: lib.rs
days/day7/src/: lib.rs
days/day8/: Cargo.toml
days/day8/src/: lib.rs
days/day9/: Cargo.toml
days/day9/src/: lib.rs
days/template/: Cargo.toml
days/template/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
