[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
day1 = { path = "../days/day1" }
day2 = { path = "../days/day2" }
day3 = { path = "../days/day3" }
day4 = { path = "../days/day4" }
day5 = { path = "../days/day5" }
day6 = { path = "../days/day6" }
day7 = { path = "../days/day7" }
day8 = { path = "../days/day8" }
day9 = { path = "../days/day9" }
day10 = { path = "../days/day10" }
day11 = { path = "../days/day11" }
day12 = { path = "../days/day12" }
day13 = { path = "../days/day13" }
day14 = { path = "../days/day14" }
